# True-Trust-Protocol

./: .gitignore  ADVANCED_NODE_README.md  BRANCH_REVIEW.md  CODE_REVIEW.md  Cargo.toml  DEMO_QUICKSTART.md  FINAL_SETUP.md  GIT_WORKFLOW.md  MINING_GUIDE.md  NLNET_GRANT_APPLICATION.md  P2P_RPC_REVIEW.md  PQ_STATUS.md  PROJECT_STATUS.md  README.md  README_USAGE.md  SECURITY_ARCHITECTURE_REVIEW.md  SYSTEM_OVERVIEW.md  TODO_LIST.md  WALLET_USAGE.md  WHITEPAPER.md  privacy_test_tx.json  run_mining_demo.ps1  test_wallet_advanced.json
.github/workflows/: ci.yml
falcon_seeded/: Cargo.toml  build.rs
falcon_seeded/benches/: falcon_ops.rs
falcon_seeded/pqclean/common/: compat.h
falcon_seeded/pqclean/common/keccak2x/: feat.S  fips202x2.c  fips202x2.h
falcon_seeded/pqclean/crypto_sign/falcon-512/clean/: falcon.c
falcon_seeded/scripts/: setup_pqclean.sh
falcon_seeded/src/: ffi.c  lib.rs
falcon_seeded/src/wallet/: wallet_api.rs
tt_node/: Cargo.toml  TrueTrust_WhitePaper_v1.docx
tt_node/docs/: ADVANCED_NODE_WALLET_INTEGRATION.md  BALANCE_AND_BROADCAST.md  P2P_STARK_TX_GUIDE.md  PRIVACY_PROOF.md
tt_node/examples/: benchmark_all.rs  benchmarks.rs  consensus_rewards_test.rs  e2e_demo.rs  e2e_full_test.rs  micro_testnet.rs  mining_demo.rs  multi_node.rs  nlnet_demo.rs  p2p_stark_tx.rs  pq_determinism_test.rs  secure_rpc_demo.rs  stealth_demo.rs  test_all_features.rs  test_consensus.rs  wallet_balance_rpc_demo.rs  wp_metrics.rs
tt_node/falcon_seeded/: Cargo.toml  build.rs
tt_node/falcon_seeded/pqclean/: tt_falcon_wrappers.c
tt_node/falcon_seeded/pqclean/common/: randombytes.c
tt_node/falcon_seeded/src/: lib.rs
tt_node/src/: README.md  chain_store.rs  consensus_pro.rs  consensus_weights.rs  core.rs  crypto_kmac_consensus.rs  falcon_key_validator.rs  falcon_sigs.rs  golden_trio.rs  hybrid_commit.rs  key_registry.rs  keystore.rs  kyber_kem.rs  lib.rs  main.rs  mod.rs  monitoring.rs  node_core.rs  node_id.rs  p2p_stark_tx.rs  pqc_verification.rs  private_stark_tx.rs  randomx_full.rs  rpc.rs  rtt_pro.rs  secure_node.rs  signing_guard.rs  simple_pq_tx.rs  snapshot_pro.rs  snapshot_witness.rs  stark_full.rs  stark_security.rs  state_priv.rs  stealth_pq.rs  stealth_registry.rs  thread_safe_drbg.rs  transaction.rs  tx_compression.rs  tx_stark.rs  tx_stark_signed.rs  (+1 more)
tt_node/src/consensus/: checkpoint.rs  mod.rs
tt_node/src/crypto/: hardware_rng.rs  kmac.rs  kmac_drbg.rs  kyber_kem.rs  mod.rs  nonce_tracker.rs  poseidon_hash_cpu.rs  poseidon_params.rs  randomx_pow.rs  seeded.rs  seeded_kyber.rs  thread_safe_drbg.rs  zk_range_poseidon.rs
tt_node/src/p2p/: channel.rs  message.rs  mod.rs  secure.rs  tx_broadcast.rs
tt_node/src/rpc/: README.md  adaptive_pow.rs  mod.rs  rate_limiter.rs  rpc_secure.rs  rpc_server.rs  security_integration.rs  verified_device_pow.rs
tt_node/src/unused/: rpc_server.rs
tt_node/src/wallet/: api.rs  mod.rs  wallet_api.rs  wallet_cli.rs
tt_node/tests/: advanced_threat_tests.rs  apocalyptic_attack_vectors.rs  brutal_security_tests.rs  cross_layer_security_tests.rs  crypto_core_tests.rs  deep_vulnerability_hunt.rs  e2e_multi_node_mining.rs  integrated_attack_vectors.rs  node_attack_tests.rs  real_security_tests.rs  security_tests.rs  system_security_tests.rs  unit_tests.rs
