[package]
name = "tt_node"
version = "0.1.0"
edition = "2021"
authors = ["TRUE_TRUST Team"]
license = "Apache-2.0"
description = "TRUE_TRUST PQC node (Falcon512 + Kyber768, RandomX, STARK/Winterfell)"

[[bin]]
name = "tt_node"
path = "src/main.rs"

[[bin]]
name = "tt_wallet"
path = "src/bin/wallet.rs"
required-features = ["wallet"]


[[example]]
name = "mining_demo"
path = "examples/mining_demo.rs"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

rand = { version = "0.8", features = ["std"] }
rand_core = "0.6"
zeroize = "1.8"

hex = "0.4"
sha2 = "0.10"
sha3 = "0.10"
tiny-keccak = { version = "2.0", features = ["cshake", "shake", "kmac"] }
randomx-rs = "1.4.1"
hmac = "0.12"
once_cell = "1.19"
log = "0.4"
num-complex = "0.4"
blake3 = "1.4"

# Symmetric crypto
aes-gcm = "0.10"
aes-gcm-siv = "0.11"
chacha20poly1305 = "0.10"

# Post-Quantum crypto
pqcrypto-falcon = "0.3"
pqcrypto-kyber  = "0.8"   # zgodne z Twoim kyber_kem.rs
pqcrypto-traits = "0.3"
pqc_kyber = { version = "0.7", features = ["kyber768"], optional = true }  # deterministyczne keypair

# Async / networking
tokio = { version = "1.38", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
tokio-socks = { version = "0.5", optional = true }  # SOCKS5 proxy (Tor support)

# CLI and logging
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }

# Transcript / ZK stuff
merlin = "3.0"

# Winterfell STARK
winterfell = { version = "0.13", default-features = false, features = ["std", "concurrent"], optional = true }
falcon_seeded = { path = "falcon_seeded", optional = true }

# Wallet-specific dependencies
rpassword = { version = "7.3", optional = true }
dirs = { version = "5.0", optional = true }
bech32 = { version = "0.11", optional = true }
sharks = { version = "0.5", optional = true }
argon2 = { version = "0.5", optional = true }
parking_lot = "0.12"
constant_time_eq = "0.1"
lazy_static = "1.4"

# Compression for PQ transactions
zstd = "0.13"
crc32fast = "1.4"

[features]
default = ["winterfell_v2"]
networking = []
winterfell_v2 = ["winterfell"]
seeded_falcon = ["falcon_seeded"]
seeded_kyber = ["pqc_kyber"]  # deterministyczne klucze Kyber
# wallet v7 wymaga deterministycznych kluczy PQ - automatycznie włącza seeded_falcon i seeded_kyber
wallet = ["rpassword", "dirs", "bech32", "sharks", "argon2", "seeded_falcon", "seeded_kyber"]
tor_proxy = ["tokio-socks"]   # SOCKS5 proxy support (external Tor)
winterfell = ["dep:winterfell"]
pqclean = ["falcon_seeded"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

 

[[example]]
name = "pq_determinism_test"
path = "examples/pq_determinism_test.rs"
required-features = ["seeded_kyber"]
